--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <title>Design Landing Page</title>
   </head>
   <body>
@@ -25,6 +27,8 @@
           <h5 class="nav-item">CONTACT</h5>
         </div>
         <button class="signin-btn">SIGN IN</button>
+        <div class="burger"><i class="fa-solid fa-bars"></i></div>
+
       </nav>
       <div class="intro-section">
         <div class="left-section">
